[gd_scene load_steps=8 format=2]

[ext_resource path="res://Views/Battle/UI/Battle.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/BattleInstants/BattleInstants.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/CrewCard/CrewCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://ReusableUI/TraitCard/TraitCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://ReusableUI/ResistanceCard/Resistance.tscn" type="PackedScene" id=5]
[ext_resource path="res://ReusableUI/StanceCard/StanceCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://ReusableUI/AllActionCard/AllActionCard.tscn" type="PackedScene" id=7]

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Footer" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="TrackerContainer" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 1920.0
margin_bottom = 139.0

[node name="Control" type="Control" parent="TrackerContainer"]
margin_right = 954.0
margin_bottom = 85.0
rect_min_size = Vector2( 200, 85 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AfterTurn" type="HBoxContainer" parent="TrackerContainer"]
margin_left = 958.0
margin_right = 958.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 85 )

[node name="BeforeTurn" type="HBoxContainer" parent="TrackerContainer"]
margin_left = 962.0
margin_right = 962.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 85 )

[node name="Control2" type="Control" parent="TrackerContainer"]
margin_left = 966.0
margin_right = 1920.0
margin_bottom = 85.0
rect_min_size = Vector2( 200, 85 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Middle" type="HBoxContainer" parent="."]
margin_top = 143.0
margin_right = 1920.0
margin_bottom = 722.0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Middle"]
margin_right = 300.0
margin_bottom = 579.0

[node name="TopSpacer" type="Control" parent="Middle/VBox"]
margin_right = 300.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomSpacer" type="Control" parent="Middle/VBox"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 404.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BattleInstants" parent="Middle/VBox" instance=ExtResource( 2 )]

[node name="Spacer" type="Control" parent="Middle"]
margin_left = 304.0
margin_right = 1920.0
margin_bottom = 579.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomControls" type="HBoxContainer" parent="."]
margin_top = 726.0
margin_right = 1920.0
margin_bottom = 1026.0
rect_min_size = Vector2( 0, 300 )

[node name="Spacer" type="Control" parent="BottomControls"]
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 0 )

[node name="Selection" type="PanelContainer" parent="BottomControls"]
margin_left = 204.0
margin_right = 705.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="BottomControls/Selection"]
margin_right = 501.0
margin_bottom = 300.0

[node name="VBox" type="VBoxContainer" parent="BottomControls/Selection/HBox"]
margin_right = 300.0
margin_bottom = 300.0

[node name="Crew" parent="BottomControls/Selection/HBox/VBox" instance=ExtResource( 3 )]
margin_right = 300.0

[node name="TraitCard" parent="BottomControls/Selection/HBox/VBox" instance=ExtResource( 4 )]
margin_top = 82.0
margin_bottom = 267.0

[node name="ResistanceCard" parent="BottomControls/Selection/HBox" instance=ExtResource( 5 )]
margin_left = 304.0
margin_right = 501.0
margin_bottom = 300.0

[node name="TurnData" type="PanelContainer" parent="BottomControls"]
margin_left = 709.0
margin_right = 1210.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="BottomControls/TurnData"]
margin_right = 501.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="BottomControls/TurnData/VBox"]
margin_right = 501.0
margin_bottom = 31.0
text = "Turn : Crewman \"Badass\" Badasser"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="BottomControls/TurnData/VBox"]
margin_top = 35.0
margin_right = 501.0
margin_bottom = 218.0

[node name="StanceCard" parent="BottomControls/TurnData/VBox/HBox" instance=ExtResource( 6 )]

[node name="AllActionCard" parent="BottomControls/TurnData/VBox/HBox" instance=ExtResource( 7 )]
margin_left = 169.0
margin_right = 501.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="TargetData" type="PanelContainer" parent="BottomControls"]
margin_left = 1214.0
margin_right = 1715.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="BottomControls"]
margin_left = 1719.0
margin_right = 1919.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 0 )

[node name="Header" type="PanelContainer" parent="."]
margin_top = 1030.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 50 )
